snapshot-tests/tests/snapshots/annotate_snippets__unknown_field.snap
---
source: snapshot-tests/tests/annotate_snippets.rs
expression: rendered
---
error: unexpected key at this-field-is-not-known
 --> unknown_field:2:1
  |
2 | this-field-is-not-known = 20
  | ^^^^^^^^^^^^^^^^^^^^^^^ unexpected key
